--- a/style.css
+++ b/style.css
@@ -298,6 +298,10 @@ h1 {
 }
 
 /* ----------------------------------------PRICE--------------------------------------------------------------------------*/
+.price__section {
+  margin-bottom: 100px;
+}
+
 .section-price {
   min-width: 450px;
   min-height: 505px;
@@ -338,5 +342,63 @@ h1 {
   font-size: var(--font18);
   font-weight: 400;
   line-height: 36px;
+}
 
+/* ------------------------------------------------------CONTACT-ME-------------------------------------------------------*/
+.section-contact-me {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  height: 700px;
+  padding-top: 60px;
+  background-image: url(./assets/Img/png/contacts.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+::placeholder {
+  font-family: inherit;
+  color: var(--color-gold);
+  font-size: 20px;
+}
+
+.form-contact-me {
+  min-width: 450px;
+}
+
+.contact {
+  font-family: "Merriweather", sans-serif;
+  font-weight: 700;
+  font-size: var(--font40);
+  line-height: 80px;
+  padding: 0;
+  margin-bottom: 40px;
+  color: var(--color-gold);
+}
+
+.finput {
+  display: flex;
+  min-width: 450px;
+  height: 50px;
+  padding-left: 20px;
+  margin-bottom: 20px;
+  font-size: var(--font20);
+  color: var(--color-gold);
+  border: 2px solid var(--color-gold);
+  outline: none;
+  background-color: hsla(0, 0%, 0%, 0.5);
+}
+
+.message-inner {
+  min-width: 450px;
+  min-height: 100px;
+  padding-left: 18px;
+  padding-top: 10px;
+  font-size: var(--font20);
+  border: 2px solid var(--color-gold);
+  outline: none;
+  color: var(--color-gold);
+  background-color: hsla(0, 0%, 0%, 0.5);
+  font-family: inherit;
+  margin-bottom: 25px;
 }
